--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
         <script src="webpage.js" defer></script>
     </head>
     <body>
+
+        <!-- Header -->
         <div id="outer-header">
             <nav id="nav" class="navbar navbar-expand-sm container">
-                <a href="#"><img class="logo" src="University-of-Adelaide-white-logo.png" alt="logo"/></a>
+                <a href="/index.html">
+                    <img class="logo" src="University-of-Adelaide-white-logo.png" alt="logo"/>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false">
                     Menu
                 </button>
@@ -29,8 +33,101 @@
                 </div>
             </nav>
         </div>
-        <div id="content" class="container">
-            Content
+
+        <!-- Advertisement/Information -->
+        <div id="outer-advertisement">
+            <div class="container">
+                <div id="information-advertisement" class="row">
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <div id="img-div">
+                            <img id="news-img" class="img-fluid" src="hub.jpeg" alt="photo"/>
+                        </div>
+                    </div>
+                    <div id="news-div" class="col-sm-12 col-md-12 col-lg-6">
+                        <div id="news-content">
+                            <p id="news-title-logo">Adelaide University Clubs</p>
+                            <h2 id="news-title">Join a Club Now!</h2>
+                            <p>
+                                Enjoy the full university experience and meet new
+                                friends you can look into the many clubs offered at the university
+                                here!
+                            </p>
+                            <p>
+                                Joining a club is the best to create connections whilst engaging in various
+                                areas of sports, academia, and other hobbies. Explore something new or continue
+                                your passions now!
+                            </p>
+                            <a href="/club.html" id="learn-button">
+                                Learn more &gt;&gt;
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Updates -->
+        <div id="outer-updates">
+            <div class="container">
+                <div id="updates" class="row">
+                    <div id="upcoming-events" class="col-sm-12 col-md-12 col-lg-6">
+                        <h2 class="text-center">
+                            Upcoming Events
+                        </h2>
+                        <div class="inner">
+                            <ul>
+                                <li v-for="items in events">
+                                    <span>{{ items.content }}</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="recent-updates" class="col-sm-12 col-md-12 col-lg-6">
+                        <h2 class="text-center">
+                            Recent Updates
+                        </h2>
+                        <div class="inner">
+                            <ul>
+                                <li v-for="items in updates">
+                                    <span>{{ items.content }}</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Login Form - Using/Following Bootstrap Template -->
+        <!-- Implement using vue.js a hide for this div dependent on whether the client has already logged unto the page -->
+        <div id="outer-form">
+            <div id="form" class="container">
+                <h5 id="login-heading">
+                    Quick Login
+                </h5>
+                <form>
+                    <div class="form-outline mb-4">
+                      <input type="email" id="form2Example1" class="form-control" placeholder="Email Address"/>
+                    </div>
+
+                    <div class="form-outline mb-4">
+                      <input type="password" id="form2Example2" class="form-control" placeholder="Password"/>
+                    </div>
+
+                    <div id="signin-div">
+                        <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+                        <p>Not a member? <a href="#!">Register</a></p>
+                    </div>
+                  </form>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <div id="footer" class="text-center">
+            <img id="footer-logo" class="img-fluid" src="University-of-Adelaide-white-logo.png" alt="footer-logo"/>
+            <p id="footer-text">
+                Web Project for Web & Database Computing
+            </p>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
