More streamlined club application system

--- a/clubapplication1.html
+++ b/clubapplication1.html
@@ -37,7 +37,7 @@
         </div>
 
         <!-- Club Introduction -->
-        <h2 id="club-title" class="text-center">Example Application 1</h2>
+        <h2 id="club-title" class="text-center">Example Club Proposal 1</h2>
         <div id="outer-register">
             <div id="register" class="container text-center">
                 <div class="row">
@@ -61,35 +61,15 @@
             </div>
         </div>
 
-        <!-- Club Content -->
-        <div id="outer-content">
-            <div id="clubs-content" class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <!-- Placeholder Image -->
-                        <div id="clubs-img-div">
-                            <img id="clubs-img" class="img-fluid" src="outdoor event.jpeg" alt="photo"/>
-                        </div>
-                    </div>
-                    <div id="upcoming-club-events" class="col-sm-12 col-md-6 col-lg-6">
-                        <div>
-                            <h2 class="text-center">
-                                Upcoming Events
-                            </h2>
-                            <p class="text-center">
-                                Here are some of the upcoming events in this club.
-                            </p>
-                            <div id="clubs-inner">
-                                <ul>
-                                    <li v-for="items in events">
-                                        <span>{{ items.content }}</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div id="application">
+            <h3>Proposed club name</h3>
+            <p>Example Club 1</p>
+            <h3>Proposed President</h3>
+            <p>Example President</p>
+            <h3>Proposed Vice President</h3>
+            <p>Example vice President</p>
+            <h3>About the club</h3>
+            <p>This is where the club description is entered</p>
         </div>
 
         <!-- Footer -->
