More streamlined club application process

--- a/clubapplication1.html
+++ b/clubapplication1.html
@@ -37,7 +37,7 @@
         </div>
 
         <!-- Club Introduction -->
-        <h2 id="club-title" class="text-center">Example Club Proposal 1</h2>
+        <h2 id="club-title" class="text-center">Example Club Application 1</h2>
         <div id="outer-register">
             <div id="register" class="container text-center">
                 <div class="row">
