Fixed minor issues with code

--- a/sysadmin.html
+++ b/sysadmin.html
@@ -47,7 +47,7 @@
 
         <!-- Approve Clubs -->
         <div id="approve-clubs-title" class="container">
-            <h2 id="bold"><strong>Club Application Requests</h2>
+            <h2><strong>Club Application Requests</strong></h2>
             <small>Approve or deny any club application requests here</small>
         </div>
 
@@ -70,12 +70,12 @@
         <!-- Manage Users -->
         <div id="manage-users" class="container">
             <div id="manage-users-title" class="container">
-                <h2>Manage Users</h2>
+                <h2><strong>Manage Users</strong></h2>
                 <small>View and manage all Users' details here</small>
             </div>
             
             <button onclick="revealElement()">Reveal Users</button>
-            <div id="users-table" class="container">
+            <div class="container">
                 <table id="users-table">
                     <tr>
                       <th>First Name</th>
@@ -100,7 +100,7 @@
         <!-- Manage Clubs-->
         <div id="manage-clubs" class="container">
             <div id="manage-clubs-title" class="container">
-                <h2>Manage Clubs</h2>
+                <h2><strong>Manage Clubs</strong></h2>
                 <small>View and manage all Clubs here</small>
             </div>
             <!-- Search for Clubs on Website (directly taken from club.html) -->
@@ -123,7 +123,7 @@
         <!-- Signup new Admins-->
         <div id="signup-new-admins" class="container">
             <div id="signup-new-admins-title" class="container">
-                <h2>Sign up new Administrators</h2>
+                <h2><strong>Sign up new Administrators</strong></h2>
                 <small>Sign up new Administrators here</small>
             </div>
             <div id="admin-signup" class="container">
