--- a/public/createclub.html
+++ b/public/createclub.html
@@ -4,13 +4,13 @@
         <title>
             Home
         </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/stylesheets/style.css">
 
     </head>
 <body>
   <h1>Create Your Club</h1>
         <div class="login_and_signup_container">
-            <p>Here, you can enter the relevant details about your club. Once you submit the request, 
+            <p>Here, you can enter the relevant details about your club. Once you submit the request,
                 a system admin will check to ensure that this is an ok club to allow on the platform.</p>
             <label for="clubname"><b>Club Name</b></label>
             <br>
