--- a/public/user.html
+++ b/public/user.html
@@ -7,18 +7,18 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="user.css">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="club_home.css">
+        <link rel="stylesheet" href="/stylesheets/user.css">
+        <link rel="stylesheet" href="/stylesheets/style.css">
+        <link rel="stylesheet" href="/stylesheets/club_home.css">
 
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-        <script src="webpage.js" defer></script>
+        <script src="/javascripts/webpage.js" defer></script>
     </head>
     <body>
 
         <div id="outer-header">
             <nav id="nav" class="navbar navbar-expand-sm container">
-                <a href="#"><img class="logo" src="University-of-Adelaide-white-logo.png" alt="logo"></a>
+                <a href="#"><img class="logo" src="/images/University-of-Adelaide-white-logo.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false">
                     Menu
                 </button>
@@ -50,7 +50,7 @@
                 <h2><strong>Manage Personal Information</strong></h2>
                 <small>View and manage your personal information here!</small>
             </div>
-            
+
             <div class="container">
                 <table id="personal-data">
                     <tr>
@@ -70,7 +70,7 @@
                       <td>Club1, Club2, Club3, Club4</td>
                   </tr>
                   </table>
-            </div>            
+            </div>
         </div>
 
 
@@ -98,13 +98,13 @@
                 <p>Want to see more? Visit the Clubs page below!</p>
                 <button onclick="window.location.href = 'club.html';">CLUBS</button>
                 <br>
-            </div>            
+            </div>
         </div>
 
 
         <!-- Footer -->
         <div id="footer" class="text-center">
-            <img id="footer-logo" class="img-fluid" src="University-of-Adelaide-white-logo.png" alt="footer-logo"/>
+            <img id="footer-logo" class="img-fluid" src="/images/University-of-Adelaide-white-logo.png" alt="footer-logo"/>
             <p id="footer-text">
                 Web Project for Web & Database Computing
             </p>
