--- a/public/club1.html
+++ b/public/club1.html
@@ -8,11 +8,11 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="webpage.css">
-        <link rel="stylesheet" href="clubs.css">
+        <link rel="stylesheet" href="/stylesheets/webpage.css">
+        <link rel="stylesheet" href="/stylesheets/clubs.css">
 
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-        <script src="webpage.js" defer></script>
+        <script src="/javascripts/webpage.js" defer></script>
     </head>
     <body>
 
@@ -20,7 +20,7 @@
         <div id="outer-header">
             <nav id="nav" class="navbar navbar-expand-sm container">
                 <a href="/index.html">
-                    <img class="logo" src="University-of-Adelaide-white-logo.png" alt="logo"/>
+                    <img class="logo" src="/images/University-of-Adelaide-white-logo.png" alt="logo"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false">
                     Menu
@@ -62,7 +62,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-6">
                         <!-- Placeholder Image -->
                         <div id="clubs-img-div">
-                            <img id="clubs-img" class="img-fluid" src="outdoor event.jpeg" alt="photo"/>
+                            <img id="clubs-img" class="img-fluid" src="/images/outdoor event.jpeg" alt="photo"/>
                         </div>
                     </div>
                     <div id="upcoming-club-events" class="col-sm-12 col-md-6 col-lg-6">
@@ -88,7 +88,7 @@
 
         <!-- Footer -->
         <div id="footer" class="text-center">
-            <img id="footer-logo" class="img-fluid" src="University-of-Adelaide-white-logo.png" alt="footer-logo"/>
+            <img id="footer-logo" class="img-fluid" src="/images/University-of-Adelaide-white-logo.png" alt="footer-logo"/>
             <p id="footer-text">
                 Web Project for Web & Database Computing
             </p>
