--- a/public/clubapplication1.html
+++ b/public/clubapplication1.html
@@ -8,12 +8,12 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="webpage.css">
-        <link rel="stylesheet" href="clubs.css">
-        <link rel="stylesheet" href="clubs-application.css">
+        <link rel="stylesheet" href="/stylesheets/webpage.css">
+        <link rel="stylesheet" href="/stylesheets/clubs.css">
+        <link rel="stylesheet" href="/stylesheets/clubs-application.css">
 
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-        <script src="webpage.js" defer></script>
+        <script src="/javascripts/webpage.js" defer></script>
     </head>
     <body>
 
@@ -21,7 +21,7 @@
         <div id="outer-header">
             <nav id="nav" class="navbar navbar-expand-sm container">
                 <a href="/index.html">
-                    <img class="logo" src="University-of-Adelaide-white-logo.png" alt="logo"/>
+                    <img class="logo" src="/images/University-of-Adelaide-white-logo.png" alt="logo"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false">
                     Menu
@@ -74,7 +74,7 @@
 
         <!-- Footer -->
         <div id="footer" class="text-center">
-            <img id="footer-logo" class="img-fluid" src="University-of-Adelaide-white-logo.png" alt="footer-logo"/>
+            <img id="footer-logo" class="img-fluid" src="/images/University-of-Adelaide-white-logo.png" alt="footer-logo"/>
             <p id="footer-text">
                 Web Project for Web & Database Computing
             </p>
