--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
         <title>
             Home
         </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/stylesheets/style.css">
 
     </head>
 <body>
