--- a/public/sysadmin.html
+++ b/public/sysadmin.html
@@ -7,17 +7,17 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="sysadmin.css">
-        <link rel="stylesheet" href="clubs-application.css">
+        <link rel="stylesheet" href="/stylesheets/sysadmin.css">
+        <link rel="stylesheet" href="/stylesheets/clubs-application.css">
 
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-        <script src="webpage.js" defer></script>
+        <script src="/javascripts/webpage.js" defer></script>
     </head>
     <body>
 
         <div id="outer-header">
             <nav id="nav" class="navbar navbar-expand-sm container">
-                <a href="#"><img class="logo" src="University-of-Adelaide-white-logo.png" alt="logo"></a>
+                <a href="#"><img class="logo" src="/images/University-of-Adelaide-white-logo.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false">
                     Menu
                 </button>
@@ -73,7 +73,7 @@
                 <h2><strong>Manage Users</strong></h2>
                 <small>View and manage all Users' details here</small>
             </div>
-            
+
             <button onclick="revealElement()">Reveal Users</button>
             <div class="container">
                 <table id="users-table">
@@ -93,7 +93,7 @@
                       <td>Club1, Club2, Club3, Club4</td>
                   </tr>
                   </table>
-            </div>            
+            </div>
         </div>
 
 
@@ -116,7 +116,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>            
+            </div>
         </div>
 
 
@@ -136,13 +136,13 @@
                     <button type="submit">SIGN UP <span>&#x27f6;</span></button>
                 </form>
             </div>
-           
+
         </div>
 
 
         <!-- Footer -->
         <div id="footer" class="text-center">
-            <img id="footer-logo" class="img-fluid" src="University-of-Adelaide-white-logo.png" alt="footer-logo"/>
+            <img id="footer-logo" class="img-fluid" src="/images/University-of-Adelaide-white-logo.png" alt="footer-logo"/>
             <p id="footer-text">
                 Web Project for Web & Database Computing
             </p>
