Commiting working login, sign up and log out

--- a/public/login.html
+++ b/public/login.html
@@ -103,6 +103,7 @@
               <input class = "signup_inputs" type="password" placeholder="Enter Password" id="repeat-password" required>
               <br>
               <button type="submit" onclick="signUp();">Signup</button>
+              <button type="submit" onclick="logOut();">Logout test</button>
             </div>
           </div>
         </div>
