user event update mysql works

--- a/public/club1.html
+++ b/public/club1.html
@@ -55,31 +55,32 @@
             </div>
         </div>
 
-        <!-- Club Content -->
-        <div id="outer-content">
-            <div id="clubs-content" class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <!-- Placeholder Image -->
-                        <div id="clubs-img-div">
-                            <img id="clubs-img" class="img-fluid" src="/images/outdoor event.jpeg" alt="photo"/>
+        <!-- Updates Events -->
+        <div id="outer-updates">
+            <div class="container">
+                <div id="updates" class="row">
+                    <div id="upcoming-events-one" class="col-sm-12 col-md-12 col-lg-6">
+                        <h2 class="text-center">
+                            Upcoming Events
+                        </h2>
+                        <div class="inner">
+                            <ul>
+                                <li>
+
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                    <div id="upcoming-club-events" class="col-sm-12 col-md-6 col-lg-6">
-                        <div>
-                            <h2 class="text-center">
-                                Upcoming Events
-                            </h2>
-                            <p class="text-center">
-                                Here are some of the upcoming events in this club.
-                            </p>
-                            <div id="clubs-inner">
-                                <ul>
-                                    <li v-for="items in events">
-                                        <span>{{ items.content }}</span>
-                                    </li>
-                                </ul>
-                            </div>
+                    <div id="recent-updates-one" class="col-sm-12 col-md-12 col-lg-6">
+                        <h2 class="text-center">
+                            Recent Updates
+                        </h2>
+                        <div class="inner">
+                            <ul>
+                                <li>
+
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
