--- a/public/user.html
+++ b/public/user.html
@@ -8,11 +8,12 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="/stylesheets/user.css">
-        <link rel="stylesheet" href="/stylesheets/style.css">
+        <!-- <link rel="stylesheet" href="/stylesheets/style.css"> -->
         <link rel="stylesheet" href="/stylesheets/club_home.css">
 
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
         <script src="/javascripts/webpage.js" defer></script>
+        <script src="/javascripts/manageEventUpdate.js" defer></script>
     </head>
     <body>
 
@@ -101,6 +102,52 @@
             </div>
         </div>
 
+        <div id="createEvent" class="container">
+            <h5 class="formHeading">
+                Create Event
+            </h5>
+            <form>
+                <div class="form-outline mb-4">
+                <input type="text" id="form2Example1" class="form-control" placeholder="Event Name" required/>
+                </div>
+
+                <div class="form-outline mb-4">
+                    <textarea type="text" id="form2Example2" class="form-control" placeholder="Description" rows=3 required></textarea>
+                    </div>
+
+                <div class="form-outline mb-4">
+                <input type="date" id="form2Example3" class="form-control" placeholder="Date" required/>
+                </div>
+
+                <div class="form-outline mb-4">
+                    <input type="time" id="form2Example4" class="form-control" placeholder="Time" required/>
+                </div>
+
+                <div>
+                    <button type="button" class="btn btn-primary btn-block mb-4" onclick="submitEvent()">Submit</button>
+                </div>
+            </form>
+        </div>
+
+        <div id="postUpdate" class="container">
+            <h5 class="formHeading">
+                Post Update
+            </h5>
+            <form>
+                <div class="form-outline mb-4">
+                <input type="text" id="form2Example5" class="form-control" placeholder="Title" required/>
+                </div>
+
+                <div class="form-outline mb-4">
+                <textarea type="text" id="form2Example6" class="form-control" placeholder="Description" rows=3 required></textarea>
+                </div>
+
+                <div>
+                    <button type="button" class="btn btn-primary btn-block mb-4" onclick="postUpdate()">Submit</button>
+                </div>
+            </form>
+        </div>
+
 
         <!-- Footer -->
         <div id="footer" class="text-center">
@@ -109,6 +156,8 @@
                 Web Project for Web & Database Computing
             </p>
         </div>
+
+
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
