--- a/public/user.html
+++ b/public/user.html
@@ -102,6 +102,8 @@
             </div>
         </div>
 
+        <!-- KIAN, CREATE EVENT, POST UPDATE, working for SQL, does not validate user -->
+
         <div id="createEvent" class="container">
             <h5 class="formHeading">
                 Create Event
@@ -148,6 +150,7 @@
             </form>
         </div>
 
+        <!-- END OF KIAN EVENT AND UPDATE -->
 
         <!-- Footer -->
         <div id="footer" class="text-center">
