Added ability to hide Create Event and Create Update divs based on user type

--- a/public/user.html
+++ b/public/user.html
@@ -105,7 +105,7 @@
         <!-- KIAN, CREATE EVENT, POST UPDATE, working for SQL, does not validate user -->
 
         <div id="createEvent" class="container">
-            <h5 class="formHeading">
+            <h5 class="formHeading" id="createEventHeading">
                 Create Event
             </h5>
             <form>
@@ -132,7 +132,7 @@
         </div>
 
         <div id="postUpdate" class="container">
-            <h5 class="formHeading">
+            <h5 class="formHeading" id="postUpdateHeading">
                 Post Update
             </h5>
             <form>
