--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
             </div>
         </div>
 
-        <!-- Updates -->
+        <!-- Updates
         <div id="outer-updates">
             <div class="container">
                 <div id="updates" class="row">
@@ -96,7 +96,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Login Form - Using/Following Bootstrap Template -->
         <!-- Implement using vue.js a hide for this div dependent on whether the client has already logged unto the page -->
