--- a/public/club2.html
+++ b/public/club2.html
@@ -93,7 +93,7 @@
             </div>
         </div>
 
-        <!-- KIAN, CREATE EVENT, POST UPDATE, working for SQL, does not validate user -->
+        <!-- KIAN, CREATE EVENT, POST UPDATE, UPDATE EVENT, working for SQL, does not validate user -->
 
         <div id="createEvent" class="container">
             <h5 class="formHeading" id="createEventHeading">
@@ -137,6 +137,40 @@
 
                 <div>
                     <button type="button" class="btn btn-primary btn-block mb-4" onclick="postUpdate()">Submit</button>
+                </div>
+            </form>
+        </div>
+
+        <div id="updateEvent" class="container">
+            <h5 class="formHeading" id="updateEventHeading">
+                Update Event
+            </h5>
+            <form>
+                <div class="form-outline mb-4">
+                    <select class="form-select" v-model="selectedEvent" @change="updateSelectedEvent">
+                        <option value="" disabled>Select an event</option>
+                        <option v-for="event in events" :value="event">{{ event.event_name }}</option>
+                    </select>
+                </div>
+
+                <div class="form-outline mb-4">
+                <input type="text" id="form2Example7" class="form-control" placeholder="Event Name" required/>
+                </div>
+
+                <div class="form-outline mb-4">
+                    <textarea type="text" id="form2Example8" class="form-control" placeholder="Description" rows=3 required></textarea>
+                    </div>
+
+                <div class="form-outline mb-4">
+                <input type="date" id="form2Example9" class="form-control" placeholder="Date" required/>
+                </div>
+
+                <div class="form-outline mb-4">
+                    <input type="time" id="form2Example10" class="form-control" placeholder="Time" required/>
+                </div>
+
+                <div>
+                    <button type="button" class="btn btn-primary btn-block mb-4" @click="updateEvent">Submit</button>
                 </div>
             </form>
         </div>
