dimos static changes

--- a/public/club2.html
+++ b/public/club2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-AU">
     <head>
-        <title>Club 2</title>
+        <title>Computer Science Club</title>
 
         <meta charset="utf-8">
         <meta name="club-id" content="2">
@@ -40,13 +40,14 @@
         </div>
 
         <!-- Club Introduction -->
-        <h2 id="club-title" class="text-center">Club 2</h2>
+        <h2 id="club-title" class="text-center">Computer Science Club</h2>
         <div id="outer-register">
             <div id="register" class="container text-center">
                 <div class="row">
                     <div id="description" class="col-sm-12 col-md-6 col-lg-6">
-                        Our 'Club 2' is a fun and inclusive community where individuals of all skill
-                        levels can come together to learn and enjoy!
+                        A club dedicated to Computer Science! We talk all things comp sci, we do workshops, competitive programming,
+                        games nights and more! You dont even have to be a comp sci student to join! Press register to club to be able to RSVP for
+                        events!
                     </div>
                     <!-- In a more developed version, with an implemented database, this register button will
                     serve the function of registering a logged in user into the club -->
@@ -54,6 +55,11 @@
                         <a href="#" id="register-button">
                             Register Here
                         </a>
+                        <div id="email-notifs-button-div" class="col-sm-12 col-md-6 col-lg-6 d-flex align-items-center justify-content-evenly">
+                            <a href="#" id="email-notifs-button">
+                                Sign Up For Email Notifications Here
+                            </a>
+                       </div>
                     </div>
                 </div>
             </div>
