--- a/public/club3.html
+++ b/public/club3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-AU">
     <head>
-        <title>Archery Club</title>
+        <title>Greek club</title>
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
@@ -37,13 +37,13 @@
         </div>
 
         <!-- Club Introduction -->
-        <h2 id="club-title" class="text-center">Archery Club</h2>
+        <h2 id="club-title" class="text-center">Greek club</h2>
         <div id="outer-register">
             <div id="register" class="container text-center">
                 <div class="row">
                     <div id="description" class="col-sm-12 col-md-6 col-lg-6">
-                        The Archery Club is for all those passionate about the ol' bow and arrow! We accept those of all skill
-                        levels, regardless of culture or background! Register to join our club so you can RSVP to events!
+                        Opa re! This is the greek club! Here we do weekly speaking sessions and monthly events! Keep an eye out for these
+                        events and any changes to times of our weekly speaking sessions below! Θα τα πούμε!
                     </div>
                     <!-- In a more developed version, with an implemented database, this register button will
                     serve the function of registering a logged in user into the club -->
