--- a/public/club4.html
+++ b/public/club4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-AU">
     <head>
-        <title>Archery Club</title>
+        <title>Gym Club</title>
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
@@ -37,13 +37,13 @@
         </div>
 
         <!-- Club Introduction -->
-        <h2 id="club-title" class="text-center">Archery Club</h2>
+        <h2 id="club-title" class="text-center">Gym Club</h2>
         <div id="outer-register">
             <div id="register" class="container text-center">
                 <div class="row">
                     <div id="description" class="col-sm-12 col-md-6 col-lg-6">
-                        The Archery Club is for all those passionate about the ol' bow and arrow! We accept those of all skill
-                        levels, regardless of culture or background! Register to join our club so you can RSVP to events!
+                        The Gym Club is for anyone who loves working out, or wants to get into it. We do weekly gym meetups and
+                        also host events too! Register to get updates and be able to RSVP to events, time to hit the weights!
                     </div>
                     <!-- In a more developed version, with an implemented database, this register button will
                     serve the function of registering a logged in user into the club -->
