--- a/public/user.html
+++ b/public/user.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/stylesheets/user.css">
         <!-- <link rel="stylesheet" href="/stylesheets/style.css"> -->
         <link rel="stylesheet" href="/stylesheets/club_home.css">
-
+        <link rel="stylesheet" href="/stylesheets/webpage.css">
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
         <script src="/javascripts/webpage.js" defer></script>
         <script src="/javascripts/account.js" defer></script>
