XIAOYU- added minor changes to sessions

--- a/public/club1.html
+++ b/public/club1.html
@@ -49,9 +49,10 @@
                     serve the function of registering a logged in user into the club -->
                     <div id="register-button-div" class="col-sm-12 col-md-6 col-lg-6 d-flex align-items-center justify-content-evenly">
                        <!--<img src="/images/archery.jpg" alt="Photo of an individual using a bow and arrow" class="context_photo">-->
-                        <a href="#" id="register-button">
+                        <!-- XIAOYU WEDNESDAY NIGHT, button only -->
+                        <button type="button" id="register-button" onclick="enrolClub()">
                             Register Here
-                        </a>
+                        </button>
                         <div id="email-notifs-button-div" class="col-sm-12 col-md-6 col-lg-6 d-flex align-items-center justify-content-evenly">
                              <a href="#" id="email-notifs-button">
                                  Sign Up For Email Notifications Here
