added comments, xiaoyu

--- a/public/club2.html
+++ b/public/club2.html
@@ -52,9 +52,10 @@
                     <!-- In a more developed version, with an implemented database, this register button will
                     serve the function of registering a logged in user into the club -->
                     <div id="register-button-div" class="col-sm-12 col-md-6 col-lg-6 d-flex align-items-center justify-content-evenly">
-                        <a href="#" id="register-button">
+                        <!-- XIAOYU WEDNESDAY NIGHT, button only -->
+                        <button type="button" id="register-button" onclick="enrolClub()">
                             Register Here
-                        </a>
+                        </button>
                         <div id="email-notifs-button-div" class="col-sm-12 col-md-6 col-lg-6 d-flex align-items-center justify-content-evenly">
                             <a href="#" id="email-notifs-button">
                                 Sign Up For Email Notifications Here
